--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/substantial/react-media-queryable/issues"
   },
-  "homepage": "https://github.com/substantial/react-media-queryable"
+  "homepage": "https://github.com/substantial/react-media-queryable",
+  "peerDependencies": {
+    "react": "*"
+  },
+  "devDependencies": {
+    "react-tools": "0.13.3"
+  }
 }
