--- a/package.json
+++ b/package.json
@@ -25,15 +25,11 @@
     "react": "*"
   },
   "devDependencies": {
-    "browserify": "^10.2.4",
     "gulp": "^3.9.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
-    "gulp-umd": "^0.2.0",
-    "gulp-util": "^3.0.5",
-    "react-tools": "0.13.3",
-    "reactify": "^1.1.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "webpack": "^1.9.10",
+    "webpack-stream": "^2.0.0"
   }
 }
