Remove unnecessary ignores

--- a/bower.json
+++ b/bower.json
@@ -21,9 +21,6 @@
   "private": true,
   "ignore": [
     "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
+    "node_modules"
   ]
 }
