--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-media-queryable",
   "version": "3.0.0",
   "description": "Trigger state update on media query change.",
-  "main": "lib/index.cjs.js",
+  "main": "cjs/index.js",
   "module": "src/index.js",
   "scripts": {
     "build": "rollup -c",
